# wasm_primes

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml
.github/workflows/: build_and_test.yaml
frontend/: BUILD.bazel  index.html
primes/: BUILD.bazel  benchmark.cc  main.cc  primes.cc  primes.h  primes_worker.h  ring_buffer.h  test.cc
