load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

cc_library(
    name = "primes",
    srcs = ["primes.cc", "primes_worker.h", "ring_buffer.h"],
    hdrs = ["primes.h"],
    cxxopts = ["-O3", "-sWASM_WORKERS", "-pthread", "-sALLOW_BLOCKING_ON_MAIN_THREAD=0", "-sASYNCIFY"],
    linkopts = ["-sPTHREAD_POOL_SIZE_STRICT=16", "-sWASM_WORKERS", "-pthread", "-sALLOW_BLOCKING_ON_MAIN_THREAD=0", "-sASYNCIFY", "-sEXPORTED_RUNTIME_METHODS=['addFunction']", "-sALLOW_TABLE_GROWTH"]
)

cc_binary(
    name = "primes_bin",
    srcs = ["main.cc"],
    deps = [":primes"],
    cxxopts = ["-O3", "-sWASM_WORKERS", "-pthread", "-sINVOKE_RUN=0", "-sALLOW_BLOCKING_ON_MAIN_THREAD=0", "-sASYNCIFY"],
    linkopts = ["-sPTHREAD_POOL_SIZE_STRICT=16", "-sWASM_WORKERS", "-pthread", "-sINVOKE_RUN=0", "-sALLOW_BLOCKING_ON_MAIN_THREAD=0", "-sASYNCIFY", "-sEXPORTED_RUNTIME_METHODS=['addFunction']", "-sALLOW_TABLE_GROWTH"]
)

wasm_cc_binary(
    name = "primes_bin_wasm",
    cc_target = ":primes_bin",
    threads = "emscripten",
    visibility = ["//visibility:public"]
)