load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

COMPILER_FLAGS = [
    #"-O0",
    "-O3",
    "-sWASM_WORKERS",
    "-pthread",
    "-sALLOW_BLOCKING_ON_MAIN_THREAD=0",
    "-sASYNCIFY",
    #"-sASSERTIONS=2",
    #"-g",
    #"-sEXCEPTION_DEBUG=1"
]

LINKER_FLAGS = [
    #"-O0",
    "-O3",
    "-sPTHREAD_POOL_SIZE=16",
    "-sWASM_WORKERS",
    "-pthread",
    "-sALLOW_BLOCKING_ON_MAIN_THREAD=0",
    "-sASYNCIFY",
    "-sEXPORTED_RUNTIME_METHODS=['addFunction']",
    "-sALLOW_TABLE_GROWTH",
    #"-sASSERTIONS=2",
    #"-g",
    #"-sEXCEPTION_DEBUG=1"
]

cc_library(
    name = "primes",
    srcs = [
        "primes.cc",
        "primes_worker.h",
        "ring_buffer.h",
    ],
    hdrs = ["primes.h"],
    cxxopts = COMPILER_FLAGS,
    linkopts = LINKER_FLAGS,
)

cc_binary(
    name = "primes_bin",
    srcs = ["main.cc"],
    cxxopts = COMPILER_FLAGS,
    linkopts = LINKER_FLAGS,
    deps = [":primes"],
)

wasm_cc_binary(
    name = "primes_bin_wasm",
    cc_target = ":primes_bin",
    threads = "emscripten",
    visibility = ["//visibility:public"],
)
